@@ -1,12 +1,14 @@
-================================================================
-                   ObexFTP over serial lines
-                    (cobex custom transport)
-================================================================
+COBEX CUSTOM TRANSPORT
+======================
 
-  Christian Zuckschwerdt  <zany@triq.net>  2002-04-29
+ObexFTP over serial lines
+=========================
+
+  2002-04-29  Christian Zuckschwerdt  <zany@triq.net>
 
 
-1. Introduction
+(1) Introduction
+----------------
 
  It is possible to access your phone or general mobile device
  using a serial line. However there is no common protocol used by
@@ -15,7 +17,8 @@
  There are currently two of the available:
 
 
-2. COBEX BFB
+(2) Cobex BFB
+-------------
 
  This custom transport library supports many Siemens Mobile Equipment.
  Namely the x45 series phones.
@@ -25,14 +28,16 @@
  be nice at all. I can't imagine another name though.
 
 
-3. COBEX ERICSSON
+(3) Cobex ERICSSON
+------------------
 
  Is a custom transport for Ericsson phones.
  It is tested with T39m and ported from an old R320 driver. Therefor might
  work for those phones.
 
 
-4. COBEX <Your Phone>
+(4) Cobex /Your Phone/
+----------------------
 
  Be sure to mail me about other phones. It might be worth it.
 
