@@ -1,6 +1,6 @@
 stef <stef@interware.hu> - helped in initial S45 research
 
-Erich Schubert <erich.schubert@mucl.de> - provides a debian package
+Erich Schubert <erich.schubert@mucl.de> - provided a debian package
 
 Eduard Bloch <edi@gmx.de> - Debian maintainer since 2003.
 
