@@ -28,6 +28,8 @@
 #include <stdio.h>
 #include <string.h>
 #include <fcntl.h>
+#include <sys/time.h>
+#include <sys/types.h>
 #include <unistd.h>
 #ifdef _WIN32
 #include <windows.h>
