@@ -25,6 +25,8 @@
 #include <stdlib.h>
 #include <string.h>
 #include <fcntl.h>
+#include <sys/time.h>
+#include <sys/types.h>
 #ifndef S_SPLINT_S
 #include <unistd.h>
 #endif
