@@ -1,0 +1,90 @@
+/* OpenOBEX /ObexFTP style sheet */
+/* RAL-6017 color : #4e8541 */
+/* RAL-1018 color : #fad233 */
+
+a {		text-decoration: none; color: #4e8541; }
+a:visited {	color: #4e8541; }
+a:active {	color: #800000; }
+a:hover {	text-decoration: underline; color: #e9800f; }
+h1 a {		text-decoration: none; color: white; }
+h2 a {		text-decoration: none; color: #444; }
+h3 a {		text-decoration: none; color: #444; }
+.menu a {      	text-decoration: none; color: white; display: block; padding: 0 8px;
+                background: #4e8541; border: 1px solid #4e8541; }
+.menu a:hover {	text-decoration: none; color: black; margin-right: -1px;
+                background: #fff088; border: 1px solid #fad233; }
+.toc li a {	text-decoration: none; padding: 10px; }
+						
+
+/* Page background color */
+html,body {	margin: 0;
+		padding: 0;
+		background-color: #F5F5F5;
+		font-family: Verdana, Arial, Helvetica, sans-serif; }
+
+.header	{	height: 80px;
+		margin-bottom: 10px;
+		padding: 10px 30px;
+		color: white;
+		text-shadow: black;
+		background: url(verlauf.gif) #4e8541;
+		background-repeat: repeat-y; }
+
+.footer {	clear: both; 
+		color: white;
+		background: #4e8510;
+		margin: -8px;
+		padding: 8px; }
+
+.logo	{	position: absolute;
+		top: 10px; right: 8px;
+		border: 0; }
+
+.menu {		float:left;
+		margin: 0;
+		padding: 0;
+		color: white;
+		background: #4e8541;
+                border: 1px solid #000; border-left: none; }
+		
+.toc   {	margin-left: 20px;
+		margin-right: 30px;
+		padding: 0;
+		float: right;
+		color: #4e8541;
+		background: #eee;
+		text-shadow: black;
+		font-size: 12px; }
+		
+.main   {	margin-left: 100px; margin-right: 10px;
+		padding: 0px 10px;
+		text-shadow: black;
+		border-left: 1px solid #4e8541; }
+
+.figure   {	text-align: center; }
+
+h2,h3 {		margin-top: 10px;
+		margin-left: 10px;
+		margin-right: 10px;
+		padding: 2px 10px 2px 10px;
+		color: #4e8541;
+		background: #fff088;
+		clear: both;
+		border-bottom: 1px solid #fad233; }
+
+h1 {		padding: 4px; padding-left: 50px;
+		font-family: Impact, Verdana, Arial, Helvetica, sans-serif;
+		color: white; background: #4e8541;
+		text-shadow: black;
+		border-top: 1px solid #000; border-bottom: 1px solid #000; }
+
+hr {		border: 0; border-top: 1px solid #4e8541; }
+
+pre {		margin:		20px;
+		margin-right:	10px;
+		background:	#eeeeee;
+	        padding:	10px;
+	        border:		1px solid #dddddd;
+		color:		black;
+		overflow:	auto; }
+				
